--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <img
+        <img 
           src="img/logo.png"
           alt="Bankist logo"
           class="nav__logo"
@@ -66,7 +66,7 @@
         </h3>
       </div>
 
-      <div class="features">
+      <div class="featuresg">
         <img
           src="img/digital-lazy.jpg"
           data-src="img/digital.jpg"
